--- a/Investec.Functions/Investec.Functions/Investec.Functions.csproj
+++ b/Investec.Functions/Investec.Functions/Investec.Functions.csproj
@@ -4,6 +4,7 @@
         <AzureFunctionsVersion>V4</AzureFunctionsVersion>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
         <PackageReference Include="SendGrid" Version="9.28.1" />
     </ItemGroup>
